manifest/nginx-app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: netflix-app-service
  namespace: vr-1-ns
spec:
  ports:
  - port: 80  #this is a port number on which service will be available inside a cluster
    nodePort: 31002  #this is a port number on which service will be available outside the cluster
    targetPort: myappport #this is the port of pod where traffic will be forwarded
    protocol: TCP
  selector: #to send the traffic of this service on the pod with below labels
    app: netflix-app
  type: NodePort
