manifest/node-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: node-exporter-vr
  namespace: vr-1-ns
spec:
  selector:
      app: node-exporter-vr
  ports:
  - name: node-exporter-vr
    protocol: TCP
    port: 9200
    targetPort: 9200
  type: NodePort
